modify the cancel button and add package data

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,4 +1,5 @@
 {
+    "CANCEL":"إلغاء",
     "BUISSNESSARABE":"الأعمال بالعربية    ",
     "BUISINESSENGLISH":"الأعمال بالإنجليزية",
     "FULLNAMEAR":"الاسم كامل عربي    ",
