--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
+    "CANCEL":"Cancel",
     "BUISSNESSARABE":"Buisiness Arabe",
     "BUISINESSENGLISH":"Buisiness English",
     "FULLNAMEAR":"Full Name Arabe",
