configure the login and set the token in the localStorage

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -10,10 +10,10 @@
     "IAGREE":"أوافق على جميع البيانات الواردة في شروط الخدمة    ",
     "HAVEACCOUNT":"لديك حساب بالفعل؟    ",
     "CREATACCOUNT":"إنشاء حساب",
-    "EMAIL_PHONE":"البريد الإلكتروني / الهاتف",
+    "EMAIL_PHONE":"*البريد الإلكتروني / الهاتف",
     "SIGNUP":"اشتراك",
     "DONTHAVEACCOUNT":"ليس لديك حساب؟",
-    "PASSWORD":"كلمة السر ",
+    "PASSWORD":"*كلمة السر ",
     "LOGIN":"تسجيل",
     "arabic":"AR",
     "english":"EN",
