--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,16 +4,16 @@
     "BUISINESSENGLISH":"Buisiness English",
     "FULLNAMEAR":"Full Name Arabe",
     "FULLNAMEEN":"Full Name English",
-    "COUNTRY":"Country",
-    "CITY":"City",
+    "COUNTRY":"City",
+    "CITY":"Area",
     "REPASSWORD":"Repeat-Password",
     "IAGREE":"I agree all statements in Terms of service",
     "HAVEACCOUNT":"Have already an account ?",
     "CREATACCOUNT":"Create Account",
-    "EMAIL_PHONE":"Email/Phone",
+    "EMAIL_PHONE":"Email/Phone *",
     "SIGNUP":"Sign Up",
     "DONTHAVEACCOUNT":"Don't Have an account ?",
-    "PASSWORD":"Password",
+    "PASSWORD":"Password *",
     "LOGIN":"Login",
     "arabic":"AR",
     "english":"EN",
@@ -22,7 +22,8 @@
     "CONTACT": "Contact Us",
     "FAQ":"FAQ",
     "JOIN":"Join Us",
-    "HEAD":"Welcome to EjaratPro The Simple and precise software to manage your Property",
+    "HEAD":"Welcome to EjaratPro",
+    "SUBHEAD":" The Simple and precise software to manage your Property",
     "DESCRIPTION":"Whether you are a real estate owner or an office managing the real estate of others, you can easily start working on the system and ensure that your real estate is managed in an optimal way",
     "EARLYACCESS":"Get early access",
     "STARTBTN":"Get Started",
