correct the api

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,4 +1,7 @@
 {
+    "WELCOMEMSG":"مرحبا",
+    "SUCCESSREGISTERED":"Registered successfully! you can login now",
+    "ERRORREGISTERED":"OOps! ther's an error try again",
     "CANCEL":"إلغاء",
     "BUISSNESSARABE":"الأعمال بالعربية    ",
     "BUISINESSENGLISH":"الأعمال بالإنجليزية",
@@ -22,7 +25,8 @@
     "CONTACT": "اتصل بنا",
     "FAQ":"أسئلة شائعة",
     "JOIN":"انضم إلينا",
-    "HEAD":"مرحبا بكم في إيجارات برو برنامج بسيط ودقيق لإدارة الممتلكات الخاصة بك",
+    "HEAD":"مرحبا بكم في إيجارات برو ",
+    "SUBHEAD":"برنامج بسيط ودقيق لإدارة الممتلكات الخاصة بك",
     "DESCRIPTION":"سواء كنت مالكا عقاريا أو مكتبا يدير عقارات الآخرين ، يمكنك بسهولة البدء في العمل على النظام والتأكد من إدارة العقارات الخاصة بك بالطريقة المثلى",
     "EARLYACCESS":"الحصول على وصول مبكر",
     "STARTBTN":"بدء الاستخدام",
